Fixed bug that two words element list didn't have a line break in between

--- a/elemental/default.css
+++ b/elemental/default.css
@@ -58,7 +58,7 @@ body
     flex: 1;
     -webkit:flex: 1;
     -ms-flex: 1;
-     float: left;
+    float: left;
 
     height: 40px;
     border: none; 
@@ -136,6 +136,12 @@ img.ImageElement
     text-align: center;
     justify-content: center;
 }
+
+.ResultBoxBreak
+{
+    clear: both;
+}
+
 
 .ResultBox
 {
